css fix , content visible for course

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -223,4 +223,31 @@ input {
     background-color: #E91E63;
 }
 
+.container_content_item{
+    margin: 1rem;
+    border: 1px solid #E1E1E1;
+    padding: 1rem;
+    border-radius: 4px;
+    display: flex;
+}
+
+.container_content_item:hover{
+    cursor: pointer;
+    border: 1px solid #000;
+
+}
+
+.content_item_image{
+    height: 8rem;
+    width: 10rem;
+}
+
+.container_content_item_info{
+    flex: 1;
+    margin-left: 2rem;
+}
+
+.content_item_title{
+    font-size: 1.4rem;
+}
 
